Fix images path error

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tejas's Website</title>
   </head>
   <body>
@@ -78,20 +78,20 @@
         <a href="https://www.linkedin.com/in/tejas-pundlik/" target="_blank"
           ><img
             class="socialicons"
-            src="/images/linkedinicon.png"
+            src="images/linkedinicon.png"
             alt="Icon of linkedin"
         /></a>
         <a href="https://www.instagram.com/_tejaspundlik_/" target="_blank"
           ><img
             class="socialicons"
-            src="/images/instagramicon.png"
+            src="images/instagramicon.png"
             alt="Icon of instagram"
         /></a>
         <a href="https://github.com/TejasPundlik" target="_blank"
           ><img class="socialicons" src="/images/githubicon.png" alt="Icon of github"
         /></a>
         <a href="https://twitter.com/tejas_pundlik" target="_blank"
-          ><img class="socialiconsend" src="/images/twitter.png" alt="Icon of twitter"
+          ><img class="socialiconsend" src="images/twitter.png" alt="Icon of twitter"
         /></a>
       </div>
     </div>
