Fix the style.css error

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" >
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
     <title>Tejas's Website</title>
   </head>
   <body>
@@ -88,7 +88,7 @@
             alt="Icon of instagram"
         /></a>
         <a href="https://github.com/TejasPundlik" target="_blank"
-          ><img class="socialicons" src="/images/githubicon.png" alt="Icon of github"
+          ><img class="socialicons" src="images/githubicon.png" alt="Icon of github"
         /></a>
         <a href="https://twitter.com/tejas_pundlik" target="_blank"
           ><img class="socialiconsend" src="images/twitter.png" alt="Icon of twitter"
