Fix image of earth file error

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="top">
-      <img class="earthpng" src="/images/earth.png" alt="Image Of The Earth" />
+      <img class="earthpng" src="images/earth.png" alt="Image Of The Earth" />
       <div class="typewriter">
         <h1><span class="autotype"></span></h1>
       </div>
